# meta-memcache-py

./: .flake8  .gitignore  .mypy.ini  .pyre_configuration  CHANGELOG.md  LICENSE  README.md  benchmark.py  dev-requirements.txt  noxfile.py  pyproject.toml  train_zstd_dict_for_memcache.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml  tests.yml
src/meta_memcache/: __init__.py  cache_client.py  cache_pool.py  cache_pools.py  configuration.py  errors.py  protocol.py  serializer.py  settings.py
src/meta_memcache/base/: __init__.py  base_cache_client.py  base_cache_pool.py  base_serializer.py  base_write_failure_tracker.py  cache_pool.py  connection_pool.py  memcache_socket.py
src/meta_memcache/commands/: high_level_commands.py  meta_commands.py
src/meta_memcache/compression/: __init__.py  zstd_manager.py
src/meta_memcache/connection/: memcache_socket.py  pool.py  providers.py
src/meta_memcache/events/: __init__.py  write_failure_event.py
src/meta_memcache/executors/: default.py
src/meta_memcache/extras/: client_wrapper.py  migrating_cache_client.py  probabilistic_hot_cache.py
src/meta_memcache/interfaces/: cache_api.py  commands.py  executor.py  high_level_commands.py  meta_commands.py  router.py
src/meta_memcache/metrics/: base.py  prometheus.py
src/meta_memcache/routers/: default.py  ephemeral.py  gutter.py  helpers.py
tests/: cache_client_test.py  cache_pools_test.py  commands_test.py  compression_test.py  conftest.py  connection_pool_fork_test.py  ephemeral_cache_client_test.py  memcache_socket_test.py  migrating_cache_client_test.py  probabilistic_hot_cache_test.py  serializer_test.py
tests/base/: __init__.py  cache_pool_test.py  memcache_socket_test.py
