[tool.poetry]
name = "meta-memcache"
version = "1.0.1"
description = "Modern, pure python, memcache client with support for new meta commands."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/RevenueCat/meta-memcache-py"
repository = "https://github.com/RevenueCat/meta-memcache-py"
authors = ["Guillermo Perez <bisho@revenuecat.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uhashring = "^2.1"
marisa-trie = "^1.0.0"

[tool.poetry.group.extras.dependencies]
prometheus-client = "^0.17.1"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"
known_third_party = ["uhashring", "pytest", "pytest_mock", "marisa-trie"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["meta_memcache"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
