[project]
dependencies = [
    "uhashring >= 2.3, < 3",
    "marisa-trie >= 1.2.1, < 1.3",
    "zstandard >= 0.25.0, < 0.26",
    "meta-memcache-socket >= 0.1.3, < 0.2",
]
authors = [{ name = "Guillermo Perez", email = "bisho@revenuecat.com" }]
license = { text = "MIT License" }
name = "meta-memcache"
version = "2.0.5"
description = "Modern, pure python, memcache client with support for new meta commands."
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
metrics = ["prometheus-client >= 0.17.1"]

[project.urls]
homepage = "https://github.com/RevenueCat/meta-memcache-py"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["meta_memcache"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 88

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E731"]
"src/meta_memcache/__init__.py" = ["F401"]
